--- a/Makefile.am
+++ b/Makefile.am
@@ -20,7 +20,7 @@ pkgplugindir=$(pkglibdir)/plugin
 INCLUDES= -I$(top_builddir)/include -I$(top_srcdir)/include -I$(includedir) -I$(includedir)/mysql
 #noinst_LTLIBRARIES= mypluglib.la
 pkgplugin_LTLIBRARIES= libftbigram.la
-libftbigram_la_SOURCES= plugin_bigram.c
+libftbigram_la_SOURCES= ftbool.c plugin_bigram.c
 libftbigram_la_LDFLAGS= -module -rpath $(pkgplugindir)
 libftbigram_la_CFLAGS= -DMYSQL_DYNAMIC_PLUGIN
 
