--- a/Makefile.am
+++ b/Makefile.am
@@ -1,23 +1,7 @@
-# Copyright (C) 2005-2006 MySQL AB
-#
-# This program is free software; you can redistribute it and/or modify
-# it under the terms of the GNU General Public License as published by
-# the Free Software Foundation; version 2 of the License.
-#
-# This program is distributed in the hope that it will be useful,
-# but WITHOUT ANY WARRANTY; without even the implied warranty of
-# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
-# GNU General Public License for more details.
-#
-# You should have received a copy of the GNU General Public License
-# along with this program; if not, write to the Free Software
-# Foundation, Inc., 51 Franklin St, Fifth Floor, Boston, MA  02110-1301  USA
+# Copyright (C) 2008 Hiroaki Kawai
 
-#Makefile.am example for a plugin
-
-pkglibdir=$(libdir)/mysql
-pkgplugindir=$(pkglibdir)/plugin
-INCLUDES= -I$(top_builddir)/include -I$(top_srcdir)/include -I$(includedir) -I$(includedir)/mysql
+pkgplugindir=@MYSQL_PLUGINDIR@
+INCLUDES= -I$(top_builddir)/include -I$(top_srcdir)/include @MYSQL_INCLUDES@
 #noinst_LTLIBRARIES= mypluglib.la
 pkgplugin_LTLIBRARIES= libftbigram.la
 libftbigram_la_SOURCES= ftbool.c plugin_bigram.c
