--- a/configure.in
+++ b/configure.in
@@ -1,9 +1,19 @@
-# configure.in example for a plugin
-
-AC_INIT(plugin_bigram, 0.1)
+AC_INIT(plugin_bigram, 1.0)
 AM_INIT_AUTOMAKE
 AC_DISABLE_STATIC
 AC_PROG_LIBTOOL
+
+AC_ARG_WITH([mysql-config],
+ [AS_HELP_STRING([--with-mysql-config],[compile for specified mysql])],
+ [],[with_mysql_config=mysql_config])
+AS_IF(
+ [test "x$with_mysql_config" != x && MYSQL_VERSION=`$with_mysql_config --version` && test "x$MYSQL_VERSION" != x], 
+ [MYSQL_INCLUDES=`$with_mysql_config --include`
+  MYSQL_PLUGINDIR=`$with_mysql_config --plugindir`],
+ [AC_MSG_ERROR([mysql_config not found. Please specify --with-mysql-config.])])
+AC_SUBST(MYSQL_INCLUDES)
+AC_SUBST(MYSQL_PLUGINDIR)
+
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
 
