--- a/configure.in
+++ b/configure.in
@@ -14,6 +14,18 @@ AS_IF(
 AC_SUBST(MYSQL_INCLUDES)
 AC_SUBST(MYSQL_PLUGINDIR)
 
+AC_MSG_CHECKING(ICU is available)
+AC_ARG_WITH([icu-config],
+ [AS_HELP_STRING([--with-icu-config],[link with specified icu])],
+ [],[with_icu_config=icu-config])
+AS_IF(
+ [test "x$with_icu_config" != x && ICU_VERSION=`$with_icu_config --version` && test "x$ICU_VERSION" != x], 
+ [CPPFLAGS="$CPPFLAGS `$with_icu_config --cppflags`"
+  LDFLAGS="$LDFLAGS `$with_icu_config --ldflags`"
+  CFLAGS="$CFLAGS -DHAVE_ICU"
+  AC_MSG_RESULT(yes)],
+ [AC_MSG_RESULT(no. icu-config not found. Please specify --with-icu-config.)])
+
 AC_CONFIG_FILES([Makefile])
 AC_OUTPUT
 
