rewrite entire code from C to C++ to escape huge malloc().
git-svn-id: http://mysqlftppc.svn.sourceforge.net/svnroot/mysqlftppc/bigram/trunk@128 fbe6fafc-a77a-4c0b-9ca6-bdabefc0bdc6

--- a/Makefile.am
+++ b/Makefile.am
@@ -4,7 +4,8 @@ pkgplugindir=@MYSQL_PLUGINDIR@
 INCLUDES= -I$(top_builddir)/include -I$(top_srcdir)/include @MYSQL_INCLUDES@
 #noinst_LTLIBRARIES= mypluglib.la
 pkgplugin_LTLIBRARIES= libftbigram.la
-libftbigram_la_SOURCES= ftnorm.c ftbool.c ftstring.c plugin_bigram.c
+libftbigram_la_SOURCES= reader.cpp buffer.cpp reader_bool.cpp mempool.cpp plugin_bigram.cpp
 libftbigram_la_LDFLAGS= -module -rpath $(pkgplugindir)
 libftbigram_la_CFLAGS= -DMYSQL_DYNAMIC_PLUGIN
+libftbigram_la_CXXFLAGS= -DMYSQL_DYNAMIC_PLUGIN
 
